--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <a href="#" class="logo">
+                <a href="#hero" class="logo">
                     <i class="fas fa-fire"></i>
                     Lumina
                 </a>
@@ -25,7 +25,7 @@
 
                 <nav>
                     <ul>
-                        <li><a href="#">Início</a></li>
+                        <li><a href="#hero">Início</a></li>
                         <li><a href="#produtos">Produtos</a></li>
                         <li><a href="#sobre">Sobre</a></li>
                         <li><a href="#contato">Contato</a></li>
@@ -48,7 +48,7 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero">
+    <section class="hero" id="hero">
         <div class="container">
             <div class="hero-content">
                 <h1>Ilumine Seu Espaço com Aromas Encantadores</h1>
@@ -323,5 +323,6 @@
 
     <script src="assets/js/script.js"></script>
 </body>
+
 
 </html>
