--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="author" content="KaMark14, Kauã Marques, @kamarques_14">
+    <meta name="description"
+        content="Lumina - Sua Loja de Velas Aromáticas e Artesanais Favorita.">
+    <meta name="keywords"
+        content="velas, velas aromáticas, velas artesanais, eucalipto, lavanda, velas bonitas, velas baratas">
     <title>Lumina - Velas Aromáticas</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -326,3 +332,4 @@
 
 
 </html>
+
