--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="KaMark14, Kauã Marques, @kamarques_14">
-    <meta name="description"
-        content="Lumina - Sua Loja de Velas Aromáticas e Artesanais Favorita.">
+    <meta name="description" content="Lumina - Sua Loja de Velas Aromáticas e Artesanais Favorita.">
     <meta name="keywords"
         content="velas, velas aromáticas, velas artesanais, eucalipto, lavanda, velas bonitas, velas baratas">
     <title>Lumina - Velas Aromáticas</title>
@@ -72,11 +71,53 @@
                 <h2>Nossas Velas</h2>
             </div>
 
-            <div class="products-grid">
+            <div class="products-grid" id="velas">
                 <!-- Produtos Via JavaScript -->
             </div>
         </div>
     </section>
+
+
+    <!-- Seção de Velas decorativas -->
+    <section id="decorative-candles" class="decorative-candles">
+        <div class="container">
+            <div class="section-title">
+                <h2>Velas Decorativas</h2>
+            </div>
+
+            <div class="decorative-candles-grid">
+                <!-- Velas decorativas via JavaScript -->
+            </div>
+        </div>
+    </section>
+
+    <!-- Seção de Kits Presente -->
+    <section id="gift-sets" class="gift-sets">
+        <div class="container">
+            <div class="section-title">
+                <h2>Kits Presente</h2>
+            </div>
+
+            <div class="gift-sets-grid">
+                <!-- Kits presente via JavaScript -->
+            </div>
+        </div>
+    </section>
+
+    <!-- Seção de Acessórios -->
+    <section id="accessories" class="accessories">
+        <div class="container">
+            <div class="section-title">
+                <h2>Acessórios</h2>
+            </div>
+
+            <div class="accessories-grid">
+                <!-- Acessórios via JavaScript -->
+            </div>
+        </div>
+    </section>
+
+    <br>
 
     <!-- Seção Sobre -->
     <section id="sobre" class="about">
@@ -85,10 +126,13 @@
                 <div class="about-text">
                     <h2>Sobre a Lumina</h2>
                     <p>Desde 2015, a Lumina se dedica a criar velas aromáticas de alta qualidade que transformam
-                        ambientes e elevam experiências sensoriais. Nossa missão é levar conforto, bem-estar e beleza
+                        ambientes e elevam experiências sensoriais. Nossa missão é levar conforto, bem-estar e
+                        beleza
                         para o seu dia a dia através de aromas cuidadosamente selecionados.</p>
-                    <p>Utilizamos apenas cera de soja 100% natural, pavios de algodão e fragrâncias premium livres de
-                        ftalatos. Cada vela é feita à mão com atenção aos detalhes, garantindo um produto único e de
+                    <p>Utilizamos apenas cera de soja 100% natural, pavios de algodão e fragrâncias premium
+                        livres de
+                        ftalatos. Cada vela é feita à mão com atenção aos detalhes, garantindo um produto único
+                        e de
                         longa duração.</p>
                     <a href="#contato" class="btn">Entre em Contato</a>
                 </div>
@@ -199,7 +243,8 @@
             <div class="footer-content">
                 <div class="footer-column">
                     <h4>Lumina</h4>
-                    <p>Velas aromáticas artesanais feitas com ingredientes naturais e essências premium para transformar
+                    <p>Velas aromáticas artesanais feitas com ingredientes naturais e essências premium para
+                        transformar
                         seu ambiente.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -210,7 +255,7 @@
                 <div class="footer-column">
                     <h4>Links Rápidos</h4>
                     <ul>
-                        <li><a href="#">Início</a></li>
+                        <li><a href="#hero">Início</a></li>
                         <li><a href="#produtos">Produtos</a></li>
                         <li><a href="#sobre">Sobre</a></li>
                         <li><a href="#contato">Contato</a></li>
@@ -219,10 +264,10 @@
                 <div class="footer-column">
                     <h4>Categorias</h4>
                     <ul>
-                        <li><a href="#">Velas Aromáticas</a></li>
-                        <li><a href="#">Velas Decorativas</a></li>
-                        <li><a href="#">Kits Presente</a></li>
-                        <li><a href="#">Acessórios</a></li>
+                        <li><a href="#velas">Velas</a></li>
+                        <li><a href="#decorative-candles">Velas Decorativas</a></li>
+                        <li><a href="#gift-sets">Kits Presente</a></li>
+                        <li><a href="#accessories">Acessórios</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
@@ -317,7 +362,8 @@
         <div class="cookies-content">
             <div class="cookies-text">
                 <h3>Cookies e Privacidade</h3>
-                <p>Utilizamos cookies para melhorar sua experiência, personalizar conteúdo e anúncios, e analisar nosso
+                <p>Utilizamos cookies para melhorar sua experiência, personalizar conteúdo e anúncios, e
+                    analisar nosso
                     tráfego. Ao clicar em "Aceitar", você concorda com o uso de cookies.</p>
             </div>
             <div class="cookies-buttons">
@@ -332,4 +378,3 @@
 
 
 </html>
-
